@@ -14,6 +14,7 @@
              the module path.
    *    (ms) Another caller_depth fix in Log::Log4perl::Catalyst.
    *    (ms) Fixed logdie() caller_depth bug reported by Rob Retter.
+   *    (ms) [RT 56145] Saving errstr in DBI appender to survive ping()
 
 1.28 (2010/02/24)
    *    (ms) Fixed caller stack with Buffer composite appender
